--- a/examples/Makefile
+++ b/examples/Makefile
@@ -5,8 +5,8 @@ OPT=-g
 -include ../Makefile.config
 
 EXAMPLES = min vsum vsum2 spmv spmv2 \
-    jac1d jac2d jac2d-ser jac3d \
-    lb markov-ser markov markov2 \
+    jac1d jac1d-ser jac2d jac2d-ser jac2d-lb jac3d \
+    lb test markov-ser markov markov2 \
     propagation1d propagation2d \
     resize vsum3 \
     ping_pong \
@@ -34,11 +34,17 @@ spmv2: $(SDIR)spmv2.c $(LAIKLIB)
 
 jac1d: jac1d.o $(LAIKLIB)
 
+jac1d-ser: jac1d-ser.o $(LAIKLIB)
+
 jac2d: jac2d.o $(LAIKLIB)
+
+jac2d-lb: jac2d-lb.o $(LAIKLIB)
 
 jac3d: jac3d.o $(LAIKLIB)
 
 lb: lb.o -lm $(LAIKLIB)
+
+test: test.o -lm $(LAIKLIB)
 
 markov: markov.o $(LAIKLIB)
 
