add md cuboid collision simulation

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,6 +11,8 @@ foreach (example
     "markov"
     "markov2"
     "markov-ser"
+    "md"
+    "md-ser"
     "propagation1d"
     "propagation2d"
     "spmv"
