--- a/examples/Makefile
+++ b/examples/Makefile
@@ -12,7 +12,7 @@ OPT=-g #$(ASANCOPT)
 
 EXAMPLES = min vsum vsum2 spmv spmv2 \
     jac1d jac1d-ser jac2d jac2d-ser jac2d-lb jac3d jac3d-lb test \
-    lb markov-ser markov markov2 md md-lb md-ser md3d md3d-ser \
+    lb markov-ser markov markov2 md md-lb md-ser md3d md3d-lb md3d-ser \
     propagation1d propagation2d \
     resize vsum3 \
     ping_pong \
@@ -65,6 +65,8 @@ md-lb: md-lb.o -lm $(LAIKLIB)
 md-ser: md-ser.o -lm $(LAIKLIB)
 
 md3d: md3d.o -lm $(LAIKLIB)
+
+md3d-lb: md3d-lb.o -lm $(LAIKLIB)
 
 md3d-ser: md3d-ser.o -lm $(LAIKLIB)
 
